--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,6 @@
 <footer>
-    
+    <div><p>Product&nbsp;Design</p> <p>Remote&nbsp;Work</p> <p>UX&nbsp;Design</p> <p>Distributed&nbsp;Teams</p> <p>Creativity</p> <p>Strategy</p> <p>Suspension</p></div>
+    <img src="/nordicRose_white.svg" alt="">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eu velit tempus erat egestas efficitur. In hac habitasse platea dictumst. Fusce a nunc eget ligula suscipit finibus.</p>
+    <a href="#">Twitter</a> <a href="#">LinkeIn</a> <a href="#">RSS</a>
 </footer>
