--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,5 +1,5 @@
 <nav>
-    <img src="/nordicRose.svg" alt="NordicRose Logo">
+    <a href="/"><img src="/nordicRose.svg" alt="NordicRose Logo"></a>
     <ul>
         <li><a href="#">all</a></li>
         <li><a href="#">new&nbsp;Article</a></li>
