--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600&display=swap');
 
 :root {
     /* Colors */
@@ -35,4 +36,94 @@ nav a {
     text-decoration: none;
     text-transform: uppercase;
     letter-spacing: 1px;
+}
+#first {
+    margin: 0 15%;
+}
+#first img {
+    width: 100%;
+    padding-top: 10vh;
+    padding-bottom: 5vh;
+}
+#all-posts img {
+    width: 100%;
+    padding-top: 2vh;
+    padding-bottom: 1vh;
+}
+#first h1 {
+    font-weight: 600;
+    line-height: 4rem;
+    font-size: 4rem;
+    text-align: center;
+    text-decoration: none;
+}
+#first a {
+    text-decoration: none;
+    color: black;
+}
+#all-posts {
+    margin: 14vh 25% 8vh;
+    border-top: 2px solid black;
+}
+.posts h2 {
+    font-size: 3rem;
+    font-weight: 600;
+    text-align: center;
+    padding: 8vh 0 2vh;
+}
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 30px;
+}
+.grid p {
+    font-family: 'Fira Code', monospace;
+    font-size: 1.4rem;
+    line-height: 1.4rem;
+    text-align: center;
+}
+.grid a {
+    text-decoration: none;
+    color: black;
+}
+footer {
+    background: black;
+}
+footer div {
+    display: flex;
+    justify-content: space-between;
+}
+footer p {
+    font-family: 'Fira Code', monospace;
+    font-size: 1.4rem;
+    color: white;
+    text-align: center;
+    text-transform: uppercase;
+    padding: 4vh 0;
+    width: 100%;
+}
+footer p:last-of-type {
+    font-size: 1rem;
+    text-align: center;
+}
+footer a {
+    color: white;
+    text-align: center;
+}
+.singleP img {
+    height: 50vh;
+    width: 100%;
+    object-fit: cover;
+}
+.author {
+    padding: 0 6%;
+    text-align: right;
+}
+h1 {
+    padding: 6vh 6%;
+    font-weight: 600;
+    line-height: 3.2rem;
+    font-size: 3rem;
+    text-align: center;
+    text-decoration: none;
 }
